source/elasticlog/templates/elastic/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elastic-ss
  labels:
    component: elastic
spec:
  serviceName: "elastic-svc"
  replicas: 1
  selector:
    matchLabels:
      component: elastic
  template:
    metadata:
      labels:
        component: elastic
    spec:
      volumes:
        - name: elastic-cert
          secret:
            secretName: elastic-cert
        - name: elastic-users
          emptyDir: {}
        - name: elastic-usersetup
          configMap:
            name: elastic-usersetup
      containers:
        - name: elastic
          image: docker.elastic.co/elasticsearch/elasticsearch:8.5.3-amd64
          ports:
            - containerPort: 9200
          volumeMounts:
            - name: elastic-pvc
              mountPath: /usr/share/elasticsearch/data
            - name: elastic-cert
              mountPath: /usr/share/elasticsearch/config/certs
              readOnly: true
            - name: elastic-users
              mountPath: /usr/share/elasticsearch/config/users
              readOnly: true
              subPath: users
            - name: elastic-users
              mountPath: /usr/share/elasticsearch/config/users_roles
              readOnly: true
              subPath: users_roles
  volumeClaimTemplates:
    - metadata:
        name: elastic-pvc
        labels:
          component: elastic
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "local"
        resources:
          requests:
            storage: 10Gi
        selector:
          matchLabels:
            component: elastic
