source/elasticlog/templates/elastic/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elastic-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/whitelist-source-range: "0.0.0.0/0"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
    - hosts:
        - "elastic.local"
      secretName: elastic-cert
  rules:
    - host: "elastic.local"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: elastic-svc
                port:
                  number: 9200
